--- a/Views/Home/Start.cshtml
+++ b/Views/Home/Start.cshtml
@@ -3,5 +3,11 @@
 @{
     ViewBag.Title = "Confirmation page";
 }
-
 <h2>Confirmation page</h2>
+
+<button onclick="StartProcess(1)" type="button" id="startButton" class="btn btn-primary btn-danger">Start the process</button>
+<a asp-action="Index">Back to List</a>
+
+<script src="~/js/signalr/dist/browser/signalr.js"></script>
+<script src="~/js/longoperation_support.js"></script>
+
